--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,13 +4,21 @@ project(TRY_IDS)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 
-# ---- libpcap ----
-find_package(PkgConfig REQUIRED)
-pkg_check_modules(PCAP REQUIRED libpcap)
+# =========================
+# Npcap SDK paths
+# =========================
+set(NPCAP_SDK "C:/npcap-sdk-1.16")
 
-include_directories(${PCAP_INCLUDE_DIRS})
-link_directories(${PCAP_LIBRARY_DIRS})
+include_directories(
+    ${NPCAP_SDK}/Include
+)
 
-# ---- Subprojects ----
+link_directories(
+    ${NPCAP_SDK}/Lib/x64
+)
+
+# =========================
+# Subprojects
+# =========================
 add_subdirectory(ids_core)
 add_subdirectory(qt_gui)
